# MSPM0G3507_BASIC-

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  README.md  empty.c  empty.syscfg  框架使用说明.md
Debug/.clangd/: compile_commands.json
Debug/.clangd/.cache/clangd/index/: CMakeCCompilerId.c.19F3F06818CBEF5B.idx  CMakeCCompilerId.c.9FA2A5C00E6A427A.idx  empty.c.791900FEBF153E8C.idx  freertos_hooks.c.60160BAC2F0EB33E.idx  ti_msp_dl_config.c.CE61BF24F26E65C9.idx  ti_msp_dl_config.h.4F7F32FA7AC4DE6B.idx
app/: APP层应用编写指引.md  CMakeLists.txt  application.md  freertos_hooks.c  robot.c  robot_def.h  robot_task.h  syscalls_stub.c
app/chassis/: chassis.c  chassis.h  chassis.md
app/cmd/: robot_cmd.c  robot_cmd.h  robot_cmd.md
bsp/: CMakeLists.txt  SEGGER_RTT.h  SEGGER_RTT_Conf.h  bsp_dwt.h  bsp_init.c  bsp_init.h  bsp_mspm0_compat.c  bsp_mspm0_compat.h  bsp_usb.h  cmsis_os.h  gpio.h  i2c.h  main.h  spi.h  tim.h  usart.h
bsp/dwt/: bsp_dwt.c
bsp/flash/: bsp_flash.c  bsp_flash.h
bsp/iic/: bsp_iic.c
bsp/log/: bsp_log.c
bsp/pwm/: bsp_pwm.c  bsp_pwm.h
bsp/spi/: bsp_spi.c
bsp/usart/: bsp_usart.c
build-nortos/: .ninja_deps  .ninja_log  CMakeCache.txt  MSPM0G3507_BASIC.elf  MSPM0G3507_BASIC.hex  MSPM0G3507_BASIC.map  build.ninja  cmake_install.cmake  compile_commands.json
build-nortos/app/: cmake_install.cmake
build-nortos/bsp/: cmake_install.cmake
build-nortos/module/: cmake_install.cmake
build-nortos/syscfg/: ti_msp_dl_config.c  ti_msp_dl_config.h
cmake/: arm-none-eabi-gcc.cmake  mspm0g3507.cmake
module/: CMakeLists.txt
openocd/: cmsis_dap_mspm0g3507.cfg
targetConfigs/: MSPM0G3507.ccxml
